Fix for making DM not visible to users #22

--- a/styles/die-hard.css
+++ b/styles/die-hard.css
@@ -13,6 +13,9 @@ Inspiration/plagarism from https://gitlab.com/asacolips-projects/foundry-mods/fo
 #chat-controls .die-hard-icon-hidden {
   display: none;
 }
+.die-hard-blind-whisper {
+  display: none;
+}
 #chat-controls #die-hard-pause-fudge-icon {
   flex: 0 0 0;
   padding-left: 0px;
